--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.5",
+    "@pinata/sdk": "^1.1.25",
     "@tailwindcss/typography": "^0.5.0",
+    "canvas": "^2.9.1",
     "daisyui": "^1.24.3",
+    "dotenv": "^16.0.1",
     "ethers": "^5.6.2",
     "immer": "^9.0.12",
     "next": "12.0.8",
@@ -21,6 +24,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.29.0",
+    "react-loader-spinner": "^6.0.0-0",
     "wagmi": "^0.2.26"
   },
   "devDependencies": {
