--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "heroku": "next build && next start"
   },
   "dependencies": {
     "@heroicons/react": "^1.0.5",
