--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "heroku": "next build && next start"
   },
   "dependencies": {
+    "@alch/alchemy-web3": "^1.4.2",
     "@heroicons/react": "^1.0.5",
     "@pinata/sdk": "^1.1.25",
     "@tailwindcss/typography": "^0.5.0",
