--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@heroicons/react": "^1.0.5",
     "@pinata/sdk": "^1.1.25",
     "@tailwindcss/typography": "^0.5.0",
+    "axios": "^0.27.2",
     "canvas": "^2.9.1",
     "daisyui": "^1.24.3",
     "dotenv": "^16.0.1",
