--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.29.0",
     "react-icons": "^4.4.0",
     "react-loader-spinner": "^6.0.0-0",
+    "sharp": "^0.30.7",
     "wagmi": "^0.2.26"
   },
   "devDependencies": {
